# taskapi

./: .gitignore  main_phase1_backup.py  pyproject.toml
alembic/: env.py
alembic/versions/: 55db9206df8b_create_tasks_table.py  979ae3df5c95_add_users_table_and_task_owner_foreign_.py  e04b711ce407_initial_migration.py
app/: auth.py  config.py  database.py  main.py
app/models/: task.py  user.py
app/routers/: tasks.py
app/schemas/: task.py  user.py
